<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/screen_background_dark_transparent"
            android:gravity="fill">

            <ImageButton
                android:id="@+id/iBtn_info"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                tools:layout_editor_absoluteX="276dp" />

            <ImageView
                android:id="@+id/ivView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                app:srcCompat="@android:drawable/ic_menu_view" />

            <Switch
                android:id="@+id/switch_darkmode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|left" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout4">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_height" />

            <EditText
                android:id="@+id/tv_float_groesse"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Zentimeter_short"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:singleLine="true"
                android:textSize="56sp"
                android:theme="@style/Theme.BMICalculator" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_weight" />

            <EditText
                android:id="@+id/tv_float_gewicht"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Kilogramm_short"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|numberSigned"
                android:textSize="56sp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tv_BMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:background="@android:color/transparent"
        android:text="@string/BMI"
        android:textSize="56sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/tv_bmi_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:textSize="56sp"
        app:layout_constraintStart_toEndOf="@+id/tv_BMI"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/tv_hinweis"
        android:layout_width="273dp"
        android:layout_height="29dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/bmi_disclaimer"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_BMI" />

    <TextView
        android:id="@+id/tv_text_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_BMI" />

</androidx.constraintlayout.widget.ConstraintLayout>